Fixes #564 adds support multiple compaction executors (#1605)
This change adds support for multiple compaction executors and
multiple concurrent compactions per tablet.

The best way to understand these changes is to look at the documentation
at core/src/main/java/org/apache/accumulo/core/spi/compaction/package-info.java

* reduce default number of compaction threads

* Code review updates

* Fix build bug and improve compaction plan checking

* Added trivial todo for something I am too tired to do now

* Improve log message

* When compacting a subset, avoid doing more than logarithmic work for user compactions.